ItemStackUtils: add editMeta, add removeItalicFont ItemBuilder: refactor